# eudico

./: .gitignore  .golangci.yml  111.txt  2222.txt  Dockerfile.eudico  FAQ.md  Makefile  README.md  REBASE.md  docker-compose.eudico.yaml  go.mod  go.sum  libp2p-host-12D3KooWKMjdksKDcfoeZ9FAVAYzWbWQrZdo8TMF9smuL4mPMWWZ.keyinfo  logs.txt
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
api/: api_eudico_stats.go  api_full.go  api_hierarchical.go  api_net.go  api_subnet.go  proxy_gen.go  types.go
api/docgen/: docgen.go
api/mocks/: mock_full.go
api/v0api/: full.go  latest.go  proxy_gen.go
chain/: sync.go
chain/actors/: manifest.go
chain/checkpointing/: cbor_gen.go  constant.go  incoming.go  kvs.go  kvs_test.go  messages.go  network.go  storage.go  sub.go  util.go  util_test.go  verification.go
chain/consensus/: README.md  filecoin.go  iface.go  utils.go
chain/consensus/hierarchical/actors/rust-subnet/: Cargo.toml  rust-toolchain
chain/consensus/hierarchical/actors/rust-subnet/src/: blockstore.rs  ext.rs  lib.rs  state.rs  types.rs  utils.rs
chain/consensus/hierarchical/actors/rust-subnet/tests/: actor_test.rs  harness.rs
chain/events/: events_called.go
chain/exchange/: cbor_gen.go  client.go  peer_tracker.go  protocol.go  server.go
chain/messagepool/: messagepool.go  provider.go  selection.go
chain/sharding/: api.go  events.go  exchange.go  genesis.go  mine.go  shard.go  sub.go  utils.go
chain/stmgr/: actors.go  call.go  execute.go  forks.go  forks_test.go  stmgr.go  supply.go  utils.go
chain/store/: basefee.go  messages.go  store.go  store_test.go
chain/sub/: incoming.go
chain/types/: blockheader.go  blockmsg.go  cbor_gen.go  fullblock.go  message.go
chain/vm/: fvm.go  invoker.go  mkactor.go  runtime.go
cli/: filplus.go  services.go  wallet.go
cli/util/: api.go  (+1 more)
conformance/: driver.go
data/: peerID.txt  script.py
eudicogarden/: .gitignore  README.md  add_node.sh  add_ssh_key.sh  bootstrap.keyinfo  deploy.sh  entrypoint.sh  genesis.sh  init.sh  init_miner.sh  init_new_node.sh  main.tf  output.tf  start_bootstrap.sh  start_miner.sh  start_node.sh  tendermint.sh  test_tendermint.sh
gateway/: handler.go
genesis/: types.go
itests/: consensus_test.go  eudico_consensus_test.go  eudico_hc_test.go  eudico_subnet_test.go  worker_test.go
metrics/: metrics.go
miner/: miner.go
node/: builder.go  builder_chain.go  builder_miner.go  options.go  rpc.go
scripts/: add-dom-power.sh  add-initial-mpower.sh  data-clean.sh  data-permissions.sh  delete_eudico_data.sh  eud-deleg.sh  eud-filcns.sh  eud-new-shard.sh  eud-shard-test.sh  eud-tendermint-docker.sh  eud-tendermint-node2.sh  eud-tendermint-subnet.sh  eud-tendermint-testnet.sh  eud-tendermint-testnet2.sh  eud-tendermint-testnet4.sh  eud-tendermint.sh  eud-test-sharding.sh  eud-tspow.sh  eudico-stats.sh  eudico.sh  generate-bitcoin-blocks.sh  genesis-newstate.sh  join-tendermint.sh  regtest.sh  remove-charlie.sh  remove-dom-mpower.sh  restart-demo.sh  restart-testnet-demo.sh  restart_bitcoin.sh  taproot.sh  verification.sh
testdata/: .gitignore  README.md  deleg.gen  delegcns.gen  gen.gen  pow.gen  tendermint.gen  tspow.gen  tspow_gen.gen
(+375 files in other folders)
